# slack-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  projects.yaml  projects.yaml.example  pyproject.toml
.claude/: settings.local.json
.claude/agents/: developer.md  plan-validator.md  planner.md  reviewer.md
.claude/commands/: develop.md  harness.md  plan.md  resolve-reviews.md  review.md
.claude/skills/develop/: skill.md
.claude/skills/harness/: skill.md
.claude/skills/plan/: skill.md
.claude/skills/resolve-reviews/: skill.md
.claude/skills/review/: skill.md
.claude/skills/validate-plan/: skill.md
.plans/: SB-PROC-01.md  SB-PROC-02.md  SB-PROC-03.md
slack_bot/: chat.py  config.py  db_query.py  handlers.py  intent.py  main.py  runner.py  security.py  task_manager.py
tests/: test_auth_login.py  test_handler_stability.py  test_intent_routing.py  test_subprocess_stability.py  test_task_manager.py
