[project]
name = "slack-bot"
version = "0.1.0"
description = "Slack bot that runs Claude Code harness commands per project"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.21.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
slack-bot = "slack_bot.main:main"
